Fixed weird spacing below images.

--- a/assets/css/less/nav.less
+++ b/assets/css/less/nav.less
@@ -48,6 +48,7 @@
 			padding: 15px 0px;
 
 			img {
+				display: block;
 				width: 167px;
 				height: 44px;
 				margin-bottom: 5px;
