--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -152,6 +152,7 @@ acronym {
   padding: 15px 0px;
 }
 #nav .page_width .sidebar_width img {
+  display: block;
   width: 167px;
   height: 44px;
   margin-bottom: 5px;
